src/objects/Segment_Constant__mdt.object
<CustomObject>
    <fields>
        <fullName>Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative_Review</fullName>
                    <label>Administrative Review</label>
                </value>
                <value>
                    <fullName>Anti_Circumvention_Review</fullName>
                    <label>Anti-Circumvention Review</label>
                </value>
                <value>
                    <fullName>Changed_Circumstances_Review</fullName>
                    <label>Changed Circumstances Review</label>
                </value>
                <value>
                    <fullName>Expedited_Review</fullName>
                    <label>Expedited Review</label>
                </value>
                <value>
                    <fullName>New_Shipper_Review</fullName>
                    <label>New Shipper Review</label>
                </value>
                <value>
                    <fullName>Scope_Inquiry</fullName>
                    <label>Scope Inquiry</label>
                </value>
                <value>
                    <fullName>Sunset_Review</fullName>
                    <label>Sunset Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_Calculation_Offset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Segment Calculation Offset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>String_Value__c</fullName>
        <label>String Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_with_Field_Named__c</fullName>
        <label>Used with Field Named</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Segment Constant</label>
    <pluralLabel>Segment Constants</pluralLabel>
</CustomObject>